// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateOrUpdateArticleCategoryFeedback creates feedback on given article category 1`] = `
Object {
  "CreateOrUpdateArticleCategoryFeedback": Object {
    "articleId": "article1",
    "categoryId": "category1",
    "feedbackCount": 12,
    "feedbacks": Array [
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": "comment1",
        "vote": "UPVOTE",
      },
    ],
    "negativeFeedbackCount": 0,
    "ownVote": "UPVOTE",
    "positiveFeedbackCount": 12,
  },
}
`;

exports[`CreateOrUpdateArticleCategoryFeedback updates existing feedback 1`] = `
Object {
  "CreateOrUpdateArticleCategoryFeedback": Object {
    "articleId": "article1",
    "categoryId": "category1",
    "feedbackCount": 11,
    "feedbacks": Array [
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "DOWNVOTE",
      },
    ],
    "negativeFeedbackCount": 1,
    "ownVote": "DOWNVOTE",
    "positiveFeedbackCount": 10,
  },
}
`;
